Add initial color styles to nav items. Set base font-size to 16px.

--- a/base.css
+++ b/base.css
@@ -14,7 +14,7 @@ body {
 
 /* Set core root defaults */
 html {
-  font-size: 100%; /* Respect user's browser font-size settings */
+  font-size: 16px;
 }
 
 /* Remove list styles on ul, ol elements with a class attribute */
