--- a/style.css
+++ b/style.css
@@ -53,32 +53,46 @@ body {
   background-color: #000000;
  }
  .main-nav__menu-item-link__maps {
-  background-color: #333333;
+  background-color: #000000;
  }
  .main-nav__menu-item__info-graphics {
-  background-color: #222222;
+  background-color: #e03a3e;
  }
  .main-nav__menu-item-link__animations {
-  background-color: #444444;
+  background-color: #000000;
  }
  .main-nav__menu-item-link__other {
-  background-color: #555555;
+  background-color: #000000;
  }
  .main-nav__menu-item-link__about {
-  background-color: #666666;
+  background-color: #000000;
  }
  .main-nav__menu-item-link__contact {
-  background-color: #777777;
+  background-color: #e03a3e;
  }
 
  /* Apply styles to menu psuedo elements (grid direct child) */
  .main-nav__menu::before {
   content: "";
   grid-area: tile1;
-  background-color: #111111;
+  background-color: #fdb827;
 }
 .main-nav__menu::after {
   content: "";
   grid-area: tile2;
-  background-color: #111111;
+  background-color: #fdb827;
 }
+
+/* Apply nav link styles */
+.main-nav__menu-item-link {
+  color: #ffffff;
+  font-size: .75rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: bold;
+  letter-spacing: .185rem;
+}
+
+/* .main-nav__menu-item-link__maps {
+  color: #000000;
+} */
