--- a/style.css
+++ b/style.css
@@ -8,11 +8,39 @@ body {
   grid-template-rows: 42px 18px 25px 50px;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 1px;
+  transition: 1s;
   grid-template-areas: "home home tile1 tile1 tile1 tile1 animations animations about about contact contact"
     "maps maps maps infographics infographics infographics animations animations tile2 tile2 tile2 tile2"
     "maps maps maps infographics infographics infographics animations animations other other other other"
-    "maps maps maps infographics infographics infographics animations animations other other other other"
+    "maps maps maps infographics infographics infographics animations animations other other other other";
+  margin: 0;
 }
+@media screen and (max-width: 768px) {
+  .main-nav__menu {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 2fr 1fr 1fr 1fr 1fr 1fr;
+  }
+}
+@media screen and (max-width: 576px) {
+  .main-nav__menu {
+    grid-template-rows: 42px 12px 25px 40px;
+    grid-template-columns: 1fr 1fr 1fr 2fr 1fr 1fr 2fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-areas: "home home maps maps maps animations animations animations about about about about"
+    "tile1 tile1 tile1 tile1 tile1 animations animations animations contact contact contact contact"
+    "infographics infographics infographics infographics infographics animations animations animations contact contact contact contact"
+    "infographics infographics infographics infographics infographics animations animations animations other other other other"
+  }
+}
+@media screen and (max-width: 496px) {
+  .main-nav__menu {
+    grid-template-rows: 30px 8px 40px 38px;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 3fr 1fr 1fr;
+    grid-template-areas: "home home home home about about about about contact contact contact contact"
+    "maps maps maps maps maps maps tile1 tile1 tile1 tile1 tile1 tile1"
+    "maps maps maps maps maps maps infographics infographics infographics infographics infographics infographics"
+    "animations animations animations animations animations animations other other other other other other"
+  }
+}
+
 
 /* Apply grid-area to menu items */
 .main-nav__menu-item__home {
@@ -55,9 +83,19 @@ body {
  .main-nav__menu-item-link__maps {
   background-color: #000000;
  }
+ @media screen and (max-width: 576px) {
+  .main-nav__menu-item-link__maps {
+    background-color: #e03a3e;
+   }
+}
  .main-nav__menu-item__info-graphics {
   background-color: #e03a3e;
  }
+ @media screen and (max-width: 576px) {
+  .main-nav__menu-item__info-graphics {
+    background-color: #000000;
+   }
+}
  .main-nav__menu-item-link__animations {
   background-color: #000000;
  }
@@ -92,7 +130,8 @@ body {
   font-weight: bold;
   letter-spacing: .185rem;
 }
-
-/* .main-nav__menu-item-link__maps {
-  color: #000000;
-} */
+@media screen and (max-width: 576px) {
+  .main-nav__menu-item-link {
+    font-size: .685rem;
+  }
+}
